[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ammo.png" type="Texture" id=1]
[ext_resource path="res://assets/base.png" type="Texture" id=2]
[ext_resource path="res://Base.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.821, 27.78 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Base" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1.4865 )
shape = SubResource( 1 )

[node name="Hill" type="Sprite" parent="Area2D/CollisionShape2D"]
texture = ExtResource( 2 )

[node name="Ammo1" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )

[node name="Ammo2" type="Sprite" parent="."]
position = Vector2( -5, -4 )
texture = ExtResource( 1 )

[node name="Ammo3" type="Sprite" parent="."]
position = Vector2( 5, -4 )
texture = ExtResource( 1 )

[node name="Ammo4" type="Sprite" parent="."]
position = Vector2( -10, 6 )
texture = ExtResource( 1 )

[node name="Ammo5" type="Sprite" parent="."]
position = Vector2( 0, 6 )
texture = ExtResource( 1 )

[node name="Ammo6" type="Sprite" parent="."]
position = Vector2( 10, 6 )
texture = ExtResource( 1 )

[node name="Ammo7" type="Sprite" parent="."]
position = Vector2( -15, 16 )
texture = ExtResource( 1 )

[node name="Ammo8" type="Sprite" parent="."]
position = Vector2( -5, 16 )
texture = ExtResource( 1 )

[node name="Ammo9" type="Sprite" parent="."]
position = Vector2( 5, 16 )
texture = ExtResource( 1 )

[node name="Ammo10" type="Sprite" parent="."]
position = Vector2( 15, 16 )
texture = ExtResource( 1 )

[node name="Status" type="Label" parent="."]
process_priority = 1
margin_left = -19.9166
margin_top = 28.2028
margin_right = 21.0834
margin_bottom = 48.2028
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LOW"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoOut" type="AudioStreamPlayer2D" parent="."]
